--- a/server/package.json
+++ b/server/package.json
@@ -1,11 +1,19 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "type": "module",
   "description": "kanban app",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build:run": "tsc",
+    "build:clean": "rimraf dist",
+    "build": "npm run build:clean && npm run build:run",
+    "dev": "ts-node src/index.ts",
+    "start": "nodemon",
+    "lint": "eslint src/**/*.ts",
+    "lint:fix": "npm run lint -- --fix",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "format:check": "prettier --check \"src/**/*.ts\""
   },
   "author": "",
   "license": "ISC",
@@ -23,9 +31,19 @@
   "devDependencies": {
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
+    "@types/debug": "^4.1.7",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
     "@types/node": "^18.6.1",
-    "nodemon": "^2.0.19"
+    "@typescript-eslint/eslint-plugin": "^4.4.0",
+    "@typescript-eslint/parser": "^4.4.0",
+    "eslint": "^7.11.0",
+    "eslint-config-prettier": "^6.12.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "nodemon": "^2.0.19",
+    "prettier": "^2.1.2",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.0.3"
   }
 }
