--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,9 @@ node_modules
 # production
 build
 
+# API keys and secrets
+.env*
+
 # misc
 .DS_Store
 .env.local
@@ -21,3 +24,8 @@ build
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE
+.vscode/*
+.idea/*
+!.vscode/launch.json
